--- a/assec/index.html
+++ b/assec/index.html
@@ -11,6 +11,36 @@
             <div class="boxi"></div>
            <div class="menu">
 
+             <div id="tabmenu">  <!--menu-->
+                     <ul>
+                     <li ><a  href="">giới thiệu</a></li> <!--mục 1-->
+                     <li ><a href=""> hướng dẫn</a> </li> <!--mục 2-->
+                     <li ><a  href="">lệnh</a></li> <!--mục 3-->
+                     <li ><a  href="">cập nhật</a></li> <!--mục 4-->
+
+                 </ul>
+             </div>
+         <div class="note">
+             <div>
+                <h1 class="name">✾ Giới Thiệu ✾</h1>
+             </div>
+                 <h2 class="name2">thông tin</h2>
+             <div class="noidung">
+                 
+                 <ol >
+                     <li> Sever hiện đang thử nghiệm hỗ trợ 1.16 > 1.18 </li>
+                     <li> Có thể Hỗ trợ cho JAVA và BE&PE </li>
+                     <li> Là Sever Free nên vô fam vui thôi đừng kì vọng nhìu</li>
+                     <li> Hãy Là người mở sever Cho mọi người thì vào discore [sẽ nhận quà tân thủ siêu ngon]</li>
+                     <li> ID: cmpvn.aternos.me:44754</li>
+                     <li></li>
+                     <li></li>
+                     <li></li>
+                     <li></li>
+                 </ol>
+             </div>
+            
+         </div>
            </div>
         </div>
     </body>
