--- a/assec/index.html
+++ b/assec/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
     <head>
-        <link rel="stylesheet" href="https://hfgvv1334.github.io/cmpvnsv/main.css ">
+        <link rel="stylesheet" href="https://hfgvv1334.github.io/cmpvnsv/main.css">
         <title>❖CMP VN❖ </title>
         <link rel="icon" href="https://hfgvv1334.github.io/cmp/setup/img/logo.png">
         <meta charset="utf-8">
@@ -30,16 +30,26 @@
                  <ol >
                      <li> Sever hiện đang thử nghiệm hỗ trợ 1.16 > 1.18 </li>
                      <li> Có thể Hỗ trợ cho JAVA và BE&PE </li>
-                     <li> Là Sever Free nên vô fam vui thôi đừng kì vọng nhìu</li>
+                     <li> Là 1 Sever Cày cuốc Tương đối Khó nếu như bạn chưa đọc hướng dẫn </li>
                      <li> Hãy Là người mở sever Cho mọi người thì vào discore [sẽ nhận quà tân thủ siêu ngon]</li>
                      <li> ID: cmpvn.aternos.me:44754</li>
-                     <li></li>
-                     <li></li>
-                     <li></li>
-                     <li></li>
+                     <li>Là Nơi Có những chức năng Hay ho mà các Dân Có tiền mới có thể có đuọc</li>
+                     <li>Dù bạn được những người chơi lâu cho đồ thì khá là vô ít vì hệ thống cày cấp sẽ ngăng việt đó , những người cấp cao Họ sẽ có máu và lượng sát thương lớn hơn</li>
+                     <li>Khi bạn quá giầu và ko biết làm gì hết ? </li>
+                     <li> Cứ yên tâm sẽ lun có những hệ thông chi tiền cho những người Giàu có </li>
+                     
                  </ol>
              </div>
-            
+                    <div >
+                      <h2 class="name">Traler</h2>
+                    </div>
+                    <div  class="kvideo">
+                        <iframe class="kvideo" width="560" height="315" src="https://www.youtube.com/embed/dAhh37Sz4Ag" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <div>
+                        <h2 class="name">Truy Cập</h2>
+                        <a href="https://discord.gg/6rSAX3nUqp"><img class="discore" src="/setup/img/discore.png" ></a>
+                    </div>
          </div>
            </div>
         </div>
