--- a/assec/index.html
+++ b/assec/index.html
@@ -48,7 +48,7 @@
                     </div>
                     <div>
                         <h2 class="name">Truy Cập</h2>
-                        <a href="https://discord.gg/6rSAX3nUqp"><img class="discore" src="/setup/img/discore.png" ></a>
+                        <a href="https://discord.gg/6rSAX3nUqp"><img class="discore" src="https://raw.githubusercontent.com/hfgvv1334/cmpvn/main/setup/img/discore.png" ></a>
                     </div>
          </div>
            </div>
