--- a/assec/index.html
+++ b/assec/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
     <head>
-        <link rel="stylesheet" href="https://hfgvv1334.github.io/cmpvnsv/main.css">
+        <link rel="stylesheet" href="https://hfgvv1334.github.io/cmpvn/main.css">
         <title>❖CMP VN❖ </title>
         <link rel="icon" href="https://hfgvv1334.github.io/cmp/setup/img/logo.png">
         <meta charset="utf-8">
